src/riot-rs-macros/tests/ui/task/missing_peripherals_param.stderr
error: custom attribute panicked
 --> tests/ui/task/missing_peripherals_param.rs:7:1
  |
7 | #[riot_rs::task(autostart)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: to provide this function with peripherals, use the `peripherals` macro parameter
